--- a/3_decision/decisionTreeVisualization.ipynb
+++ b/3_decision/decisionTreeVisualization.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,10 +33,10 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import tree\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn import tree # type: ignore\n",
+    "from sklearn.datasets import load_iris # type: ignore\n",
+    "from sklearn.tree import DecisionTreeClassifier # type: ignore\n",
+    "from sklearn.model_selection import train_test_split # type: ignore"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# 我们已经在依赖模块中导入了需要的决策树模型\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.tree import DecisionTreeClassifier # type: ignore"
    ]
   },
   {
